--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Setup os
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt-get install libegl1-mesa
+        sudo apt install libegl1-mesa
     - name: Set up Python ${{ matrix.pyversion }}
       uses: actions/setup-python@v2
       with:
@@ -99,5 +99,13 @@ jobs:
       run: |
           pytest -v tests
     - name: Run Pyzo
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+          sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
+            libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
+            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0 libqt5gui5
+          xvfb-run --auto-servernum python pyzo --test
+    - name: Run Pyzo
+      if: matrix.os != 'ubuntu-latest'
       run: |
           python pyzo --test
