--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,3 +1,5 @@
+# GH Actions script to build the Pyzo binaries.
+
 name: CD
 
 on:
@@ -8,7 +10,9 @@ on:
 
 jobs:
 
-  win_amd64:
+  # The default Windows build serving the majority of users.
+  # Not needed because already installed: choco install innosetup --version=5.6.1
+  win64:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,51 +24,52 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyside6 pyinstaller
-    # Not needed because already installed: choco install innosetup --version=5.6.1
     - name: Freeze
       run: |
-          cd freeze
-          python pyzo_freeze.py
-          python pyzo_package.py
+          python freeze/pyzo_freeze.py
+          python freeze/pyzo_package.py
     - name: Test frozen
       run: |
-          python pyzo_test_frozen.py
+          python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
         path: |
-          dist/*.zip
-          dist/*.exe
+          freeze/dist/*.zip
+          freeze/ist/*.exe
         name: dist
 
+  # A 32bit windows build for people on old machines.
+  # Win32 is on the brink of deprecation, so we tune down on Py and Qt versions.
   win32:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.10
+    - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
+        python-version: '3.9'
         architecture: x86
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -U pyside6 pyinstaller
+          pip install -U pyqt5 pyinstaller
     - name: Freeze
       run: |
-          cd freeze
-          python pyzo_freeze.py
-          python pyzo_package.py
+          python freeze/pyzo_freeze.py
+          python freeze/pyzo_package.py
     - name: Test frozen
       run: |
-          python pyzo_test_frozen.py
+          python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
         path: |
-          dist/*.zip
+          freeze/dist/*.zip
         name: dist
 
+  # A MacOS build for x86_64. Via Rosetta this should work on all modern Macs,
+  # but an arm64 (M1) build would be nice in the future.
   macos_amd64:
     runs-on: macos-latest
     steps:
@@ -79,20 +84,21 @@ jobs:
           pip install -U pyside6 pyinstaller
     - name: Freeze
       run: |
-          cd freeze
-          python pyzo_freeze.py
-          python pyzo_package.py
+          python freeze/pyzo_freeze.py
+          python freeze/pyzo_package.py
     - name: Test frozen
       run: |
-          python pyzo_test_frozen.py
+          python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
         path: |
-          dist/*.zip
-          dist/*.dmg
+          freeze/dist/*.zip
+          freeze/dist/*.dmg
         name: dist
 
+  # For Linux we make a build on a somewhat older ubuntu. Most Linux users prefer (or are fine with)
+  # running Pyzo from source anyway.
   linux_amd64:
     runs-on: ubuntu-18.04
     steps:
@@ -110,24 +116,23 @@ jobs:
             libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
     - name: Freeze
       run: |
-          cd freeze
-          python pyzo_freeze.py
-          python pyzo_package.py
+          python freeze/pyzo_freeze.py
+          python freeze/pyzo_package.py
     - name: Test frozen
       run: |
-          xvfb-run --auto-servernum python pyzo_test_frozen.py
+          xvfb-run --auto-servernum python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
         path: |
-          dist/*.zip
-          dist/*.tar.gz
+          freeze/dist/*.tar.gz
         name: dist
+
 
   publish:
     name: Publish binaries to Github
     runs-on: ubuntu-latest
-    needs: [ win_amd64, win32, macos_amd64, linux_amd64 ]
+    needs: [ win64, win32, macos_amd64, linux_amd64 ]
     if: success() && startsWith(github.ref, 'refs/tags/v')
     steps:
     - uses: actions/checkout@v2
