--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,5 @@
+# GH Actions script to test Pyzo.
+
 name: CI
 
 on:
@@ -51,6 +53,10 @@ jobs:
             os: ubuntu-latest
             pyversion: '3.9'
             qtlib: pyside6
+          - name: Test Linux py310
+            os: ubuntu-latest
+            pyversion: '3.10'
+            qtlib: pyside6
           # OS's
           - name: Test Windows py310
             os: windows-latest
@@ -61,22 +67,18 @@ jobs:
             pyversion: '3.10'
             qtlib: pyside6
           # Qt libs
-          - name: Test Linux py310 PyQt5
+          - name: Test Linux py39 PyQt5
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyqt5
-          - name: Test Linux py310 PyQt6
+          - name: Test Linux py39 PyQt6
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyqt6
-          - name: Test Linux py310 PySide2
+          - name: Test Linux py39 PySide2
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyside2
-          - name: Test Linux py310 PySide6
-            os: ubuntu-latest
-            pyversion: '3.10'
-            qtlib: pyside6
     steps:
     - uses: actions/checkout@v2
     - name: Setup os
