--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyside6 pyinstaller
+          pip install -r freeze/frozen_libs.txt
     - name: Freeze
       run: |
           python freeze/pyzo_freeze.py
@@ -54,6 +55,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyqt5 pyinstaller
+          pip install -r freeze/frozen_libs.txt
     - name: Freeze
       run: |
           python freeze/pyzo_freeze.py
@@ -82,6 +84,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyside6 pyinstaller
+          pip install -r freeze/frozen_libs.txt
     - name: Freeze
       run: |
           python freeze/pyzo_freeze.py
@@ -111,6 +114,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install -U pyside6 pyinstaller
+          pip install -r freeze/frozen_libs.txt
           sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
             libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
             libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
