--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,24 +26,25 @@ jobs:
           pip install -U pyside6 pyinstaller
           pip install -r freeze/frozen_libs.txt
     - name: Freeze
-      run: |
-          python freeze/pyzo_freeze.py
-          python freeze/pyzo_package.py
+      run: python freeze/pyzo_freeze.py
+    - name: Package
+      run: python freeze/pyzo_package.py
     - name: Test frozen
-      run: |
-          python freeze/pyzo_test_frozen.py
+      run: python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
         path: |
           freeze/dist/*.zip
-          freeze/ist/*.exe
+          freeze/dist/*.exe
         name: dist
 
   # A 32bit windows build for people on old machines.
   # Win32 is on the brink of deprecation, so we tune down on Py and Qt versions.
   win32:
     runs-on: windows-latest
+    env:
+        PYZO_QT_API: PyQt5
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -54,15 +55,14 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -U pyqt5 pyinstaller
+          pip install -U %PYZO_QT_API% pyinstaller
           pip install -r freeze/frozen_libs.txt
     - name: Freeze
-      run: |
-          python freeze/pyzo_freeze.py
-          python freeze/pyzo_package.py
+      run: python freeze/pyzo_freeze.py
+    - name: Package
+      run: python freeze/pyzo_package.py
     - name: Test frozen
-      run: |
-          python freeze/pyzo_test_frozen.py
+      run: python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
@@ -86,12 +86,12 @@ jobs:
           pip install -U pyside6 pyinstaller
           pip install -r freeze/frozen_libs.txt
     - name: Freeze
-      run: |
-          python freeze/pyzo_freeze.py
-          python freeze/pyzo_package.py
+      run: python freeze/pyzo_freeze.py
+    - name: Package
+      run: python freeze/pyzo_package.py
     - name: Test frozen
-      run: |
-          python freeze/pyzo_test_frozen.py
+      shell: bash
+      run: python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
@@ -119,12 +119,11 @@ jobs:
             libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
             libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
     - name: Freeze
-      run: |
-          python freeze/pyzo_freeze.py
-          python freeze/pyzo_package.py
+      run: python freeze/pyzo_freeze.py
+    - name: Package
+      run: python freeze/pyzo_package.py
     - name: Test frozen
-      run: |
-          xvfb-run --auto-servernum python freeze/pyzo_test_frozen.py
+      run: xvfb-run --auto-servernum python freeze/pyzo_test_frozen.py
     - name: Upload distributions
       uses: actions/upload-artifact@v2
       with:
