--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -13,7 +13,7 @@ jobs:
   # The default Windows build serving the majority of users.
   # Not needed because already installed: choco install innosetup --version=5.6.1
   win64:
-    name: Windows 64
+    name: Build Windows 64
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
@@ -43,7 +43,7 @@ jobs:
   # A 32bit windows build for people on old machines.
   # Win32 is on the brink of deprecation, so we tune down on Py and Qt versions.
   win32:
-    name: Windows 32
+    name: Build Windows 32
     runs-on: windows-latest
     env:
         PYZO_QT_API: PyQt5
@@ -75,7 +75,7 @@ jobs:
   # A MacOS build for x86_64. Via Rosetta this should work on all modern Macs,
   # but an arm64 (M1) build would be nice in the future.
   macos_amd64:
-    name: MacOS amd64
+    name: Build MacOS amd64
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
@@ -106,7 +106,7 @@ jobs:
   # For Linux we make a build on a somewhat older ubuntu. Most Linux users prefer (or are fine with)
   # running Pyzo from source anyway.
   linux_amd64:
-    name: Linux amd64
+    name: Build Linux amd64
     runs-on: ubuntu-18.04
     env:
       PYZO_QT_API: PySide6
