--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -109,7 +109,7 @@ jobs:
     name: Build Linux amd64
     runs-on: ubuntu-18.04
     env:
-      PYZO_QT_API: PySide6
+      PYZO_QT_API: PyQt5
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
