--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,17 @@
+# GH Actions script to test Pyzo.
+
 name: CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
   lint-build:
-    name: Linting
+    name: Test linting
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -51,6 +53,10 @@ jobs:
             os: ubuntu-latest
             pyversion: '3.9'
             qtlib: pyside6
+          - name: Test Linux py310
+            os: ubuntu-latest
+            pyversion: '3.10'
+            qtlib: pyside6
           # OS's
           - name: Test Windows py310
             os: windows-latest
@@ -61,28 +67,24 @@ jobs:
             pyversion: '3.10'
             qtlib: pyside6
           # Qt libs
-          - name: Test Linux py310 PyQt5
+          - name: Test Linux py39 PyQt5
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyqt5
-          - name: Test Linux py310 PyQt6
+          - name: Test Linux py39 PyQt6
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyqt6
-          - name: Test Linux py310 PySide2
+          - name: Test Linux py39 PySide2
             os: ubuntu-latest
-            pyversion: '3.10'
+            pyversion: '3.9'
             qtlib: pyside2
-          - name: Test Linux py310 PySide6
-            os: ubuntu-latest
-            pyversion: '3.10'
-            qtlib: pyside6
     steps:
     - uses: actions/checkout@v2
     - name: Setup os
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt-get install libegl1-mesa
+        sudo apt install libegl1-mesa
     - name: Set up Python ${{ matrix.pyversion }}
       uses: actions/setup-python@v2
       with:
@@ -98,4 +100,14 @@ jobs:
     - name: Test on repo
       run: |
           pytest -v tests
-    # todo: add a dry-run or something so we actually boot Pyzo and close it
+    - name: Run Pyzo
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+          sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
+            libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
+            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
+          xvfb-run --auto-servernum python pyzo --test
+    - name: Run Pyzo
+      if: matrix.os != 'ubuntu-latest'
+      run: |
+          python pyzo --test
