--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
     - name: Setup os
       if: matrix.os == 'ubuntu-latest'
       run: |
+        sudo apt update
         sudo apt install libegl1-mesa
     - name: Set up Python ${{ matrix.pyversion }}
       uses: actions/setup-python@v2
