--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,7 +113,7 @@ jobs:
       run: |
         sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
             libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
-            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
+            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0 libxcb-cursor0
     - name: Run Pyzo (linux)
       if: matrix.os == 'ubuntu-latest'
       run: |
