--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -162,7 +162,7 @@ jobs:
           pip install -r freeze/frozen_libs.txt
           sudo apt install -y libdbus-1-3 libxkbcommon-x11-0 libxcb-icccm4 \
             libxcb-image0 libxcb-keysyms1 libxcb-randr0 libxcb-render-util0 \
-            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0
+            libxcb-xinerama0 libxcb-xfixes0 libxcb-shape0 libxcb-cursor0
     - name: Freeze
       run: python freeze/pyzo_freeze.py
     - name: Package
