--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,12 @@ jobs:
       matrix:
         include:
           # Main test builds, 3 OS's times 4 Qt toolkits
-          # Actually 3 Qt toolkits because PyQt6 does not work yet
           - os: windows-latest
             pyversion: '3.11'
             qtlib: pyside6
-          #- os: windows-latest
-          #  pyversion: '3.10'
-          #  qtlib: pyqt6
+          - os: windows-latest
+            pyversion: '3.11'
+            qtlib: pyqt6
           - os: windows-latest
             pyversion: '3.10'
             qtlib: pyqt5
@@ -54,9 +53,9 @@ jobs:
           - os: ubuntu-latest
             pyversion: '3.11'
             qtlib: pyside6
-          #- os: ubuntu-latest
-          #  pyversion: '3.10'
-          #  qtlib: pyqt6
+          - os: ubuntu-latest
+            pyversion: '3.11'
+            qtlib: pyqt6
           - os: ubuntu-latest
             pyversion: '3.10'
             qtlib: pyqt5
@@ -67,9 +66,9 @@ jobs:
           - os: macos-latest
             pyversion: '3.11'
             qtlib: pyside6
-          #- os: macos-latest
-          #  pyversion: '3.10'
-          #  qtlib: pyqt6
+          - os: macos-latest
+            pyversion: '3.11'
+            qtlib: pyqt6
           - os: macos-latest
             pyversion: '3.10'
             qtlib: pyqt5
