--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -91,7 +91,7 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -U pyside6 pyinstaller
+          pip install -U pyside6<=6.4.3 pyinstaller
           pip install -r freeze/frozen_libs.txt
     - name: Freeze
       run: python freeze/pyzo_freeze.py
