--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -U pytest
+          pip install -U pytest>=7.0.1
           pip install -U ${{ matrix.qtlib }}
     - name: Install in development mode
       run: |
