--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,8 +64,17 @@ jobs:
             qtlib: pyside2
           # ---
           - os: macos-latest
+            pyversion: '3.11'
+            qtlib: pyside6
+          - os: macos-latest
             pyversion: '3.12'
             qtlib: pyside6
+          - os: macos-latest
+            pyversion: '3.12'
+            qtlib: 'pyside6==6.6.0'
+          - os: macos-latest
+            pyversion: '3.12'
+            qtlib: pyqt6
           - os: macos-latest
             pyversion: '3.11'
             qtlib: pyqt6
