--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,7 +65,7 @@ jobs:
           # ---
           - os: macos-latest
             pyversion: '3.12'
-            qtlib: pyside6
+            qtlib: 'pyside6==6.6.0'
           - os: macos-latest
             pyversion: '3.11'
             qtlib: pyqt6
